--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="src/styles.css" />
     <script
       src="https://kit.fontawesome.com/7deeadf6aa.js"
       crossorigin="anonymous"
@@ -69,7 +69,7 @@
     <p>Coded by Mellisa Ann Pillay</p>
   </footer>
 
-    <script src="src/apps.js"
+    <script src="src/index.js"
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
